--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <![endif]-->
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css" type="text/css">
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.10/css/dataTables.bootstrap.min.css">
 </head>
 
 <body id="page-top">
@@ -83,10 +85,10 @@
     </div>
 </header>
 
-<section class="bg-primary" id="about">
+<section class="bg-dark" id="about">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 col-lg-offset-2 text-center">
+            <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Пример</h2>
                 <hr class="light">
 
@@ -101,14 +103,14 @@
     </div>
 </section>
 
-<section id="names" class="bg-names">
+<section id="names" class="bg-primary">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Выберите имя:</h2>
                 <hr class="primary">
                 <div id="example_wrapper" class="dataTables_wrapper col-md-6 col-md-offset-3">
-                    <table id="example" class="display dataTable table table-striped table-bordered" cellspacing="0" width="100%" role="grid"
+                    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" role="grid"
                            aria-describedby="example_info" style="width: 100%;">
                         <thead>
                         <tr role="row">
