--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Именное поздравление от Деда Мороза</title>
+    <title>Именное видео поздравление от Деда Мороза</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -62,7 +62,7 @@
                     <a class="page-scroll" href="#about">Описание</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#names">Имена</a>
+                    <a class="page-scroll" href="#names">Имя</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Контакт</a>
@@ -77,7 +77,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Именное поздравление от Деда Мороза</h1>
+            <h1>Именное видео поздравление от Деда Мороза</h1>
             <hr>
             <p>Подарите своему ребенку именное видео поздравление от настоящего Деда Мороза!</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Узнать больше</a>
